# near-workshop-2021

example/: Cargo.toml
example/src/: main.rs
social-rating/: Cargo.toml
social-rating/src/: lib.rs
status-box/: Cargo.toml  README.md
status-box/src/: lib.rs
